# Travel-Copilot

./: .dockerignore  .gitignore  Dockerfile  README.md  manage.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  tailwind.config.js
api/: api.py  urls.py
core/: __init__.py  llm_service.py
tests/: conftest.py  test_api.py  test_llm_service.py  test_views.py
travel_app/: models.py  urls.py  views.py
travel_app/templates/: base.html
travel_app/templates/travel_app/: travel_guidance.html
travel_app/templates/travel_app/partials/: conversation_pair.html
travel_app/templatetags/: markdown_extras.py
travel_copilot/: asgi.py  settings.py  urls.py  wsgi.py
